; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-cgroup.c_blkiocg_file_write_u64.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-cgroup.c_blkiocg_file_write_u64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cgroup = type { i32 }
%struct.cftype = type { i32 }
%struct.blkio_cgroup = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cgroup*, %struct.cftype*, i32)* @blkiocg_file_write_u64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @blkiocg_file_write_u64(%struct.cgroup* %0, %struct.cftype* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.cgroup*, align 8
  %6 = alloca %struct.cftype*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.blkio_cgroup*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.cgroup* %0, %struct.cgroup** %5, align 8
  store %struct.cftype* %1, %struct.cftype** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load %struct.cftype*, %struct.cftype** %6, align 8
  %12 = getelementptr inbounds %struct.cftype, %struct.cftype* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @BLKIOFILE_POLICY(i32 %13)
  store i32 %14, i32* %9, align 4
  %15 = load %struct.cftype*, %struct.cftype** %6, align 8
  %16 = getelementptr inbounds %struct.cftype, %struct.cftype* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @BLKIOFILE_ATTR(i32 %17)
  store i32 %18, i32* %10, align 4
  %19 = load %struct.cgroup*, %struct.cgroup** %5, align 8
  %20 = call %struct.blkio_cgroup* @cgroup_to_blkio_cgroup(%struct.cgroup* %19)
  store %struct.blkio_cgroup* %20, %struct.blkio_cgroup** %8, align 8
  %21 = load i32, i32* %9, align 4
  switch i32 %21, label %29 [
    i32 129, label %22
  ]

22:                                               ; preds = %3
  %23 = load i32, i32* %10, align 4
  switch i32 %23, label %28 [
    i32 128, label %24
  ]

24:                                               ; preds = %22
  %25 = load %struct.blkio_cgroup*, %struct.blkio_cgroup** %8, align 8
  %26 = load i32, i32* %7, align 4
  %27 = call i32 @blkio_weight_write(%struct.blkio_cgroup* %25, i32 %26)
  store i32 %27, i32* %4, align 4
  br label %32

28:                                               ; preds = %22
  br label %31

29:                                               ; preds = %3
  %30 = call i32 (...) @BUG()
  br label %31

31:                                               ; preds = %29, %28
  store i32 0, i32* %4, align 4
  br label %32

32:                                               ; preds = %31, %24
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}

declare dso_local i32 @BLKIOFILE_POLICY(i32) #1

declare dso_local i32 @BLKIOFILE_ATTR(i32) #1

declare dso_local %struct.blkio_cgroup* @cgroup_to_blkio_cgroup(%struct.cgroup*) #1

declare dso_local i32 @blkio_weight_write(%struct.blkio_cgroup*, i32) #1

declare dso_local i32 @BUG(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
